configuracion de bootstrap

--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- BOOTSTRAP CSS-->
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Proyecto Bootstrao</title>
 </head>
 <body>
     <h1>Este es el protecto de css con Bootstrap</h1>
 
+     <!-- BOOTSTRAP JS-->
+     <script src="node_modules/jquery/dist/jquery.js"></script>
+     <script src="node_modules/popper.js/dist/popper.min.js"></script>
+     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 </html>
