--- a/index.html
+++ b/index.html
@@ -9,7 +9,24 @@
     <title>Proyecto Bootstrao</title>
 </head>
 <body>
-    <h1>Este es el protecto de css con Bootstrap</h1>
+    <div class="container ">
+        <div class="row themed-grid-col">
+            <div class="col col-md-12 bg-danger"><p>1</p></div>
+            <div class="col col-md-8 bg-info"><p>2</p></div>
+            <div class="col col-md-4 bg-success"><p>3</p></div>            
+        </div>
+        <div class="row themed-grid-col">
+            <div class="col container-md-12 bg-danger"><p>1</p></div>
+            <div class="col container-md-8 bg-info"><p>2</p></div>
+            <div class="col container-fluid bg-success"><p>3</p></div>            
+        </div>
+        <div class="row themed-grid-col">
+            <div class="col container-md-12 bg-danger"><p>1</p></div>
+            <div class="col container-md-8 bg-info"><p>2</p></div>
+            <div class="col container-fluid bg-success"><p>3</p></div>            
+        </div>
+
+    </div>
 
      <!-- BOOTSTRAP JS-->
      <script src="node_modules/jquery/dist/jquery.js"></script>
